--- a/01_starthtml.html
+++ b/01_starthtml.html
@@ -12,7 +12,7 @@
     <!--주석-->
     <!-- 주석 키 = 컨트롤 + / -->
     <h1 style="color:cornflowerblue">안녕  내 이름은 이동준 이야</h1>
-    <h1>결혼 흥</h1>
+    <h1>결혼 흥 민이랑</h1>
     <h1 style ="border: magenta;">좋아</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi rem odio iure, quisquam praesentium quis omnis et
         consequatur, hic ipsum repudiandae magni quam totam odit pariatur quas! Perferendis, sequi odit.</p>
